fixed page fille on mobile and desktop

--- a/css/style.css
+++ b/css/style.css
@@ -27,22 +27,29 @@
   --white: white;
 }
 
+html, body {
+  max-width: 100%;
+  height: auto;
+  margin: 0;
+  padding: 0;
+}
 body {
   font-family: "Cinzel";
-  background-color: var(--tan);
+  background-color: var(--yellow);
   color: var(--purple);
   margin: 0;
   padding: 0;
-  max-height: 100vh;
+  /* min-height: calc(100vh-[footer height in px]); */
 }
 
 header {
   background-color: var(--darkpurple);
   color: var(--red);
-/*   max-width: 100%;
-  max-height: 20%; */
-/*   margin: none; */
+  max-width: 100%;
+  max-height: 20%;
+  margin: none; 
 }
+
 .head-bar {
   display: flex;
   justify-content: space-between;
@@ -99,6 +106,7 @@ i:hover {
 
 
 .hero-section {
+  max-width: 100%;
   max-height: 3%;
   display: grid;
   grid-template-rows: 1fr 2fr 1fr 1fr;
@@ -112,23 +120,26 @@ i:hover {
   padding-left: 5rem;
   align-content: space-between;
   padding-bottom: 5rem;
+  p {
+    margin: 0;
+  }
+  h1 {
+    color: var(--red);
+    padding: 0;
+    margin: 0;
+    font-size: 3.5rem;
+  }
+  h2 {
+    padding: 0;
+    margin: 0;
+    font-size: 2rem;
+  }
 }
-.hero-section p {
-  margin: 0;
-}
-.hero-section h1 {
-  color: var(--red);
-  padding: 0;
-  margin: 0;
-  font-size: 3.5rem;
-}
-.hero-section h2 {
-  padding: 0;
-  margin: 0;
-  font-size: 2rem;
-}
+
+
 .projects-grid-container{
   background-color: var(--tan);
+  max-width: 100%;
 }
 .card-wrapper {
   padding: 1rem;
@@ -207,13 +218,14 @@ img {
 }
 
 footer {
+  position: static;
   border-top: 5px solid transparent;
   border-image: linear-gradient(45deg, orange, violet);
   border-image-slice: 1;
   background-color: var(--darkpurple);
   color: var(--purple);
   max-width: 100%;
-  height: 100vh;
+  height: 12rem;
   margin: auto;
   padding: 3rem;
   text-align: center;
@@ -374,10 +386,15 @@ margin: auto;
     border-image-slice: 1;
     background-color: var(--darkpurple);
     padding: 2rem;
+    max-width: 100%;
+    height: 150%;
+    /* height: 80%; */
   }
   .contact-page-grid-container {
     margin: auto;
-    max-width: 50%;
+    width: 50%;
+    height: auto;
+  
   }
 .customer-input-wrapper {
     display: grid;
@@ -405,6 +422,7 @@ margin: auto;
     color: var(--red);
     cursor: pointer;
   }
+  conta
    
    
 
@@ -426,6 +444,7 @@ margin: auto;
   }
   .burger {
     display: block;
+    /* overflow-x: hidden; */
     background-color: var(--red);
     border: none;
     margin-top: 1.5rem;
@@ -532,6 +551,10 @@ margin: auto;
   }
 } 
 @media (min-width: 1100px) {
+  .hero-section, .about-page-hero-section, .contact-page-hero-section {
+    padding: 1.5rem 3rem;
+  }
+
   .jscode-btn-container {
     display: grid;
     grid-auto-flow: column;
